--- a/todo.org
+++ b/todo.org
@@ -1,4 +1,5 @@
 #+title: Code TODO
+* [ ] Add a way to pass final output to a different workflow as an input
 * [ ] Cleanup and optimizations
 ** [X] Autocompleters needs consts at model level
 * [ ] Documentation
