--- a/todo.org
+++ b/todo.org
@@ -113,6 +113,7 @@ client_session: <aiohttp.client.ClientSession object at 0x131801dc0>
 *** [ ] Use containerization / sandboxing framework when available
 * [ ] Tools
 ** [ ] Allow tools to inject system or user prompts. Prompt should be configurable/overridable.
+** [ ] Maximum tool call rounds should be configurable per node
 ** [X] Update tool result formatter to, optionally, print tool calling results
 ** [ ] Integrate Know
 *** [ ] Figure out how to express 3rd party dependencies and give access
@@ -144,4 +145,5 @@ client_session: <aiohttp.client.ClientSession object at 0x131801dc0>
 ** [ ] Figure out sandboxing
 *** [ ] Wrap stdio MCP servers in sandbox
 *** [ ] Wrap shell tool in sandbox
-** [X] Apply patch tool - useful for fully-agentic loops
+** [ ] Apply patch tool - useful for fully-agentic loops
+*** [ ] Does not work with formatter types
