--- a/todo.org
+++ b/todo.org
@@ -1,7 +1,7 @@
 #+title: Code TODO
 * [ ] Figure out why exec node returns same result twice
 * [ ] Add multi-repo support
-** [ ] Work with default repo with ability to specify repo id (or a virtual path) to see files
+** [X] Work with default repo with ability to specify repo id (or a virtual path) to see files
 from other repos? Or just boost default repository results? (knowlt)
 ** [ ] Commands to add/list/remove repos from the project
 ** [ ] Figure out a way to list files in repos and/or push main repo files up (knowlt)
