--- a/todo.org
+++ b/todo.org
@@ -3,8 +3,12 @@
 * [ ] Add multi-repo support
 ** [X] Work with default repo with ability to specify repo id (or a virtual path) to see files
 from other repos? Or just boost default repository results? (knowlt)
-** [ ] Commands to add/list/remove repos from the project
-** [ ] Figure out a way to list files in repos and/or push main repo files up (knowlt)
+** [X] Commands to add/list/remove repos from the project
+** [X] Figure out a way to list files in repos and/or push main repo files up (knowlt)
+** [ ] Fix repos list output for primary repo
+** [ ] Change command to repo, instead of repos
+** [ ] Add progress callback to refresh_all() (knowlt)
+** [ ] Add repo refresh subcommand
 * [X] Add a way to pass final output to a different workflow as an input in the UI
 * [ ] Cleanup and optimizations
 ** [X] Autocompleters needs consts at model level
